# Licensed under the Apache-2.0 license

[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

[features]
openssl = ["dep:openssl", "dep:hkdf", "dep:sha2"]
rustcrypto = ["dep:elliptic-curve", "dep:hkdf", "dep:hmac", "dep:p256", "dep:p384", "dep:rand", "dep:sha2", "dep:base64ct", "dep:ecdsa"]
deterministic_rand = ["dep:rand"]

[dependencies]
arrayvec = { version = "0.7.4", default-features = false, features = ["zeroize"] }
ecdsa = {verion = "0.16.9", optional = true}
elliptic-curve = {version = "0.13.8", optional = true}
hkdf = { version = "0.12.3", optional = true }
hmac = {version="0.12.1", optional = true}
openssl = {version = "0.10.57", optional = true}

p256 = {version= "0.13.2", optional = true}
p384 = {version= "0.13.0", optional = true}
rand = { version = "0.8.5", optional = true }
sha2 = { version = "0.10.6", optional = true }
zeroize = { version = "1.6.0", default-features = false, features = ["zeroize_derive"] }

[dev-dependencies]
strum = "0.24"
strum_macros = "0.24"

[build-dependencies]
openssl = {version = "0.10.57", optional = true}
rand = {version = "0.8.5", optional = true}
p256 = {version= "0.13.2", optional = true}
p384 = {version= "0.13.0", optional = true}
elliptic-curve = {version = "0.13.8", optional = true}
base64ct = {version= "1.6.0", optional= true}
